# map-lgb-fond

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md
.github/: copilot-instructions.md
.github/workflows/: deploy-frontend.yml
docs/: architecture.md  cicd.md  database.md  frontend.md  implementation.md  requirements.md  training.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/histories/: chiba_latest_history.json  kanagawa_latest_history.json  saitama_latest_history.json  tokyo_latest_history.json
frontend/public/metadata/: chiba_latest_categories.json  chiba_latest_metadata.json  kanagawa_latest_categories.json  kanagawa_latest_metadata.json  saitama_latest_categories.json  saitama_latest_metadata.json  tokyo_latest_categories.json  tokyo_latest_metadata.json
frontend/public/models/: chiba_latest.onnx  kanagawa_latest.onnx  saitama_latest.onnx
frontend/public/stations/: chiba_stations.json  (+3 more)
frontend/src/: App.tsx  main.tsx  styles.css
skills/map-lgb-fond/: SKILL.md
training/: .env.example  pyproject.toml
training/configs/: chiba.yaml  kanagawa.yaml  saitama.yaml  tokyo.yaml
training/scripts/: train_all_models.sh
training/src/collect/: collect.py  mlit.py
training/src/common/: config.py
training/src/evaluate/: metrics.py
training/src/experiment/: database.py  init_db.py
training/src/export/: artifacts.py  stations.py
training/src/features/: category_dictionary.py  providers.py
training/src/preprocess/: cleaning.py  preprocess.py
training/src/train/: model.py  train.py
(+17 files in other folders)
