[project]
name = "map-lgb-fond-training"
version = "0.1.0"
description = "Training pipeline for the real estate price prediction application"
readme = "../README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "lightgbm>=4.5.0",
  "numpy>=2.0.0",
  "onnxmltools>=1.12.0",
  "optuna>=4.0.0",
  "pandas>=2.2.0",
  "pyarrow>=18.0.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.0",
  "skl2onnx>=1.17.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0"
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
